# chess-platform

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  devenv.nix  fly.toml  skills-lock.json
.sqlx/: query-1edf705781e8fea4530e9f97c15fe066d28f6af0e08b2c908f36db5b7eed349f.json  query-36caa6de28b86ca3c04ebaa7e20b9c1253d1e11dd184017eb24780df81ddcdc9.json  query-3a139ab41e70266ab6a4860bcd460f464c62c6b2ef8ae25646c1b37395ac0c88.json  query-44ccccb246d6b6dfb32ab639cabe8d2ec6651fdf493ea609f26d559272a2a7d8.json  query-5818a136bc1c563f4cabe15278d34aaf6d25d7b2a62d68cdaa5b0e7486f2dc9c.json  query-7a2f1ce98b93a722c7afb69eee1027054da6d8613fd83f12c97d6b5ce98b941b.json  query-821665c7ea997ac18ccf16e940921de5e1daac2b444b9bd5b79ab6a87bba294c.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9e003eac75b2f4ad11eb98ff692d92d9cff6b18816a9bc0b8d0004606317cadc.json  query-bbf9f0a3f38c4144348dbe6ec406f6e7971227be1a0791bbd8a6ffc2f038ba42.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
branding/: Ruchess Chess Sets.html
crates/shared/: Cargo.toml  README.md
crates/shared/src/: game.rs  lib.rs  matchmaking.rs  messages.rs  player.rs
crates/shared/src/messages/: game.rs  matchmaking.rs  mod.rs
crates/web/: .env.example  Cargo.toml  README.md
crates/web/src/: app.rs  game.rs  game_room.rs  lib.rs  main.rs  state.rs  websocket.rs
crates/web/src/auth/: auth.rs  errors.rs  github.rs  google.rs  mod.rs
crates/web/src/components/: auth.rs  board.rs  board_user.rs  chess_board.rs  mod.rs  nav.rs  play_board.rs  square.rs  user.rs
crates/web/src/matchmaking/: find_pair.lua  matchmaking.rs  mod.rs  websocket.rs
crates/web/src/pages/: create_username.rs  home.rs  login.rs  mod.rs  not_found.rs  play.rs  register.rs
migrations/: 0001_users.sql  0002_oauth_accounts.sql  0003_sessions.sql  0004_user_profile.sql  0005_games.sql  0006_ratings.sql
