[workspace]
members = [
    "crates/shared",
    "crates/web",
]
resolver = "2"

[workspace.dependencies]
# Versions defined once, referenced by members
shared = { path = "crates/shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = { version = "0.27", features = ["variant"] }
leptos = { version = "0.8", features = [] }
axum = { version = "0.8", features = ["ws"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "time"] }
server_fn = { version = "0.8" }
futures = "0.3"
rand = "0.9"
tracing = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
