[workspace]
members = [
    "crates/shared",
    "crates/web",
]
resolver = "2"

[workspace.dependencies]
# Versions defined once, referenced by members
shared = { path = "crates/shared" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = { version = "0.30", features = ["variant"] }
leptos = { version = "0.8", features = [] }
leptos-use = { version = "0.18.3", features = ["use_draggable"] }
axum = { version = "0.8", features = ["ws", "macros"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "time"] }
server_fn = { version = "0.8" }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rand = "0.10.1"
tracing = "0.1.44"
uuid = { version = "1", features = ["v4", "serde", "js"] }
web-sys = { version = "=0.3.94" }

# Size-optimized profile for the WASM bundle
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
