[workspace]
members = [
    "crates/shared",
    "crates/web",
]
resolver = "2"

[workspace.dependencies]
# Only deps used by more than one crate belong here
shared = { path = "crates/shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = { version = "0.30", features = ["variant"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Size-optimized profile for the WASM bundle
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"
