[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = [] }
leptos_router = { version = "0.8.0" }
leptos-use = { version = "0.18.3", features = ["use_draggable"] }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
server_fn = { version = "0.8", optional = true }
rand = { version = "0.10.1", optional = true }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-ring", "uuid", "time"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "=0.2.117", optional = true }
web-sys = { version = "=0.3.94" }
futures = "0.3"
shared = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
shakmaty = { workspace = true }
oauth2 = { version = "5.0.0", features = ["reqwest"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
openidconnect = { version = "4.0.1", optional = true }
axum-login = { version = "0.18", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-redis-store = { version = "0.16", default-features = false, optional = true }
fred = { version = "10.1.0", features = ["sha-1", "i-scripts"], optional = true }
argon2 = { version = "0.5.3", features = ["std"], optional = true }
time = { version = "0.3.47", optional = true }
thiserror = { version = "2", optional = true }
dotenvy = { version = "0.15.7", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }


[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:server_fn",
    "dep:rand",
    "dep:leptos_axum",
    "dep:tokio-stream",
    "dep:oauth2",
    "dep:reqwest",
    "dep:openidconnect",
    "dep:axum-login",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:fred",
    "dep:argon2",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tower-http",
    "dep:time",
    "dep:thiserror",
    "dep:dotenvy",
    "dep:rustls",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
csr = ["leptos/csr"]


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "web"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/web.css
tailwind-input-file = "style/main.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

# Runs wasm-opt on release WASM output. 'z' = optimize for size.
wasm-opt = 'z'
